# computer-store

back/: .env.copy  .gitignore  buildspec.yml  docker-compose.yml  pyproject.toml  template.yml
back/iac/search_streaming/: handler.py
back/scripts/: load_data.py  load_open_search.py
back/src/autocomplete/: lambda_handler.py
back/src/search_products/: buildspec.yml  lambda.py  template.yml
front/: .dockerignore  .npmignore  Dockerfile  buildspec.yml  next.config.js  package-lock.json  package.json  template.yml
front/iac/: package.json
front/src/: _slice.tsx  constants.tsx
front/src/components/Layout/: index.tsx
front/src/components/ProductGrid/: index.tsx
front/src/components/ProductItem/: index.tsx
front/src/components/SearchBar/: index.tsx
front/src/components/SearchBar/SearchInput/: index.tsx  slice.tsx
front/src/components/Spinner/: index.tsx
front/src/pages/: _app.tsx  index.tsx  query.tsx
front/src/store/: index.js
front/src/styles/: globals.css  theme.tsx
iac/: package-lock.json  package.json
iac/front/: package-lock.json
iac/lib/Lambdas/DynamoSearchStreamer/: handler.py
